Fix with overlapping content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 main{
   max-width: 500px;
-  margin: auto;
+  margin: 10%;
 }
 #main{
     /* glass effect*/
@@ -179,4 +179,8 @@ button:hover {
     margin: 0;
     font-size: 1rem;
     font-weight: 300;
+}
+.content{
+  padding-top: 70px;
+  z-index: 0;
 }
